Add CompanyController with cgetAction
